Enhance HTML structure and styles: add footer links, update headings, and integrate new font styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <p>
         Associant esprit créatif à compétences scientifiques, l’IMAC forme des
         professionnels dans les domaines du web, du multimédia, de
-        l’audiovisuel, de la communication. Notre formation intègre l'<a href=""
+        l’audiovisuel, de la communication. Notre formation intègre l'<a
+          href="https://www.esiee.fr/"
           >ESIEE Paris</a
         >, l'école de l'innovation technologique.
       </p>
@@ -59,27 +60,41 @@
           <figcaption>À Champs-sur-Marne</figcaption>
         </figure>
       </div>
-
-      <a class="CTA_devWeb" href="">
+      <h2>
+        Vous aussi, devenez<br />
+        ingénieur-e créatif-ve !
+      </h2>
+      <a class="CTA_devWeb" href="/web.html">
         Découvrir le<br />
         développement Web
       </a>
     </main>
     <footer>
-      <div>
-        <div>
+      <div class="footer_nav">
+        <div class="advertise">
           Toute ressemblance avec des faits existants ou ayant existé serait
           purement fortuite.
         </div>
-        <div>
+        <div class="links_container">
+          <strong>En savoir plus :</strong>
           <ul>
-            <li><a href="">site web de l'ESIEE Paris</a></li>
-            <li><a href="">site web officiel de la formation IMAC</a></li>
-            <li><a href="">site web de l’Université Gustave Eiffel</a></li>
+            <li>
+              <a href="https://www.esiee.fr/">site web de l'ESIEE Paris</a>
+            </li>
+            <li>
+              <a href="https://www.ingenieur-imac.fr/">
+                site web officiel de la formation IMAC
+              </a>
+            </li>
+            <li>
+              <a href="https://www.univ-gustave-eiffel.fr/">
+                site web de l’Université Gustave Eiffel
+              </a>
+            </li>
           </ul>
         </div>
       </div>
-      <span></span>
+      <div class="legal_mention">IMAC - 2024</div>
     </footer>
   </body>
 </html>
