--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
   <body class="web">
     <nav>
       <div>
-        <a href="">
+        <a href="/index.html">
           <img
             src="/assets/images/logo_imac.svg"
             alt="logo imac avec lien pour retour à l'Accueil"
@@ -47,5 +47,32 @@
         </p>
       </div>
     </main>
+    <footer>
+      <div class="footer_nav">
+        <div class="advertise">
+          Toute ressemblance avec des faits existants ou ayant existé serait
+          purement fortuite.
+        </div>
+        <div class="links_container">
+          <strong>En savoir plus :</strong>
+          <ul>
+            <li>
+              <a href="https://www.esiee.fr/">site web de l'ESIEE Paris</a>
+            </li>
+            <li>
+              <a href="https://www.ingenieur-imac.fr/">
+                site web officiel de la formation IMAC
+              </a>
+            </li>
+            <li>
+              <a href="https://www.univ-gustave-eiffel.fr/">
+                site web de l’Université Gustave Eiffel
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="legal_mention">IMAC - 2024</div>
+    </footer>
   </body>
 </html>
