Add target="_blank" to external links for improved user experience

--- a/web.html
+++ b/web.html
@@ -57,15 +57,17 @@
           <strong>En savoir plus :</strong>
           <ul>
             <li>
-              <a href="https://www.esiee.fr/">site web de l'ESIEE Paris</a>
+              <a href="https://www.esiee.fr/" target="_blank"
+                >site web de l'ESIEE Paris</a
+              >
             </li>
             <li>
-              <a href="https://www.ingenieur-imac.fr/">
+              <a href="https://www.ingenieur-imac.fr/" target="_blank">
                 site web officiel de la formation IMAC
               </a>
             </li>
             <li>
-              <a href="https://www.univ-gustave-eiffel.fr/">
+              <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">
                 site web de l’Université Gustave Eiffel
               </a>
             </li>
