--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         professionnels dans les domaines du web, du multimédia, de
         l’audiovisuel, de la communication. Notre formation intègre l'<a
           href="https://www.esiee.fr/"
+          target="_blank"
           >ESIEE Paris</a
         >, l'école de l'innovation technologique.
       </p>
@@ -79,15 +80,17 @@
           <strong>En savoir plus :</strong>
           <ul>
             <li>
-              <a href="https://www.esiee.fr/">site web de l'ESIEE Paris</a>
+              <a href="https://www.esiee.fr/" target="_blank"
+                >site web de l'ESIEE Paris</a
+              >
             </li>
             <li>
-              <a href="https://www.ingenieur-imac.fr/">
+              <a href="https://www.ingenieur-imac.fr/" target="_blank">
                 site web officiel de la formation IMAC
               </a>
             </li>
             <li>
-              <a href="https://www.univ-gustave-eiffel.fr/">
+              <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">
                 site web de l’Université Gustave Eiffel
               </a>
             </li>
